--- a/source/test_mock.html
+++ b/source/test_mock.html
@@ -5,6 +5,6 @@
         <canvas id="worldCanvas" width="800" height="600" style="border:1px solid #000000;">
            </canvas>
 
-        <script src="../dist/walkers.min.js"></script>
+        <script src="../dist/test_mock.min.js"></script>
     </body>
 </html>
