--- a/test/test_all.html
+++ b/test/test_all.html
@@ -10,6 +10,7 @@
                 test : <select id='testSelect'>
                         <option>test1</option>
                         <option>test2</option>
+                        <option>test3</option>
                     </select>
 
               <button onclick="runTest();">RUN ENGINE AND TEST</button>      
