--- a/test/test_all.html
+++ b/test/test_all.html
@@ -17,7 +17,7 @@
               <div id="mousePositionX">x=?</div>
               <div id="mousePositionY">y=?</div>
               <br>
-        <canvas id="worldCanvas" width="800" height="600" style="border:1px solid #000000;">
+        <canvas id="worldCanvas" width="800" height="600" style="border:1px solid #000000; height: 100%; overflow: hidden; width: 100%; position: fixed;">
            </canvas>
 
         <script>
