--- a/test/test_all.html
+++ b/test/test_all.html
@@ -13,10 +13,12 @@
               <button onclick="runTest();">RUN ENGINE AND TEST</button>      
               <div id="mousePositionX">x=?</div>
               <div id="mousePositionY">y=?</div>
-              <div id="messages">messages</div>
+        
               <br>
         <canvas id="worldCanvas" width="800" height="600" style="border:1px solid #000000;">
            </canvas>
+           <div id="messages1">messages</div>
+           <div id="messages2">messages</div>
 
         <script src="../dist/test_all.min.js"></script>
 
