--- a/test/test_all.html
+++ b/test/test_all.html
@@ -19,6 +19,8 @@
            </canvas>
            <div id="messages1">messages</div>
            <div id="messages2">messages</div>
+           <div id="messages3">messages</div>
+
 
         <script src="../dist/test_all.min.js"></script>
 
